El formulario de alumno ya funciona

--- a/Index.html
+++ b/Index.html
@@ -48,14 +48,14 @@
         <section id="inscripcion">
             <h2>Inscripción</h2>
             <form id="inscripcion-form">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required><br>
-                <label for="correo">Correo:</label>
-                <input type="email" id="correo" name="correo" required><br>
-                <label for="telefono">Teléfono:</label>
-                <input type="text" id="telefono" name="telefono" required><br>
-                <label for="id_pago">ID Pago:</label>
-                <input type="text" id="id_pago" name="id_pago"><br>
+                <label for="Nombre">Nombre:</label>
+                <input type="text" id="Nombre" name="Nombre" required><br>
+                <label for="Correo">Correo:</label>
+                <input type="email" id="Correo" name="Correo" required><br>
+                <label for="idPago">ID Pago:</label>
+                <input type="text" id="idPago" name="idPago"><br>
+                <label for="noTelefono">Teléfono:</label>
+                <input type="text" id="noTelefono" name="noTelefono" required><br>
                 <button type="submit">Inscribirse</button>
             </form>
         </section>
