Correcion de dedtalles del front

--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,7 @@
             <table>
                 <thead>
                     <tr>
+                        <th>Cédula</th>
                         <th>Nombre</th>
                         <th>Correo</th>
                         <th>Teléfono</th>
@@ -95,8 +96,13 @@
                 <thead>
                     <tr>
                         <th>Curso</th>
-                        <th>Descripción</th>
+                        <th>Horario</th>
+                        <th>Cupo</th>
                         <th>Duración</th>
+                        <th>ID Temario</th>
+                        <th>ID Profesor</th>
+                        <th>Costo</th>
+                        <th>ID Categoria</th>
                     </tr>
                 </thead>
                 <tbody id="curso-list">
